thank you close #1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
    <div class="header">
-   <div class=header-logo>日常に死があふれるサバイバル！！</div>
+   <div class=header-logo>日常に死があふれるサバイバル！！！</div>
    <div class="header-list" >
     <ul>
       <li>マイクラ</li>
